# presentations-python-secrets_at_rest

code/: main.py  pyproject.toml
demo/: README.md  compose.yml
demo/src/app/static/: index.html
docker-demos/better/: compose.yml
docker-demos/better/cat_app/: Dockerfile  README.md
docker-demos/better/cat_app/src/app/: __init__.py
docker-demos/better/cat_app/src/app/static/: index.html
docker-demos/better/secret_store/: Dockerfile  compose.yml  secrets.json
docker-demos/hackable/: README.md  api.key  compose.yml
docs/: index.html
presentation/: index.html
simple_cli/: main.py  pyproject.toml
simple_service/: main.py  pyproject.toml
simple_service/src/: __init__.py
simple_service/src/app/: __init__.py
simple_service/src/app/static/: index.html
simple_service/src/models/: __init__.py  config_template.conf
simple_service/src/util/: Email.py  SecretUtil.py  SecureDelete.py  __init__.py
