[project]
name = "cat_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.112.2",
    "python-multipart>=0.0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cat_app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
]
